// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-default-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#333333",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-default-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": true,
        "disabled": false,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#333333",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-default-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#333333",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-default-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": true,
        "disabled": false,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#333333",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-disabled-dark-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
        "disabled": true,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(229, 229, 230, 0.38)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-disabled-dark-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": true,
        "disabled": true,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(229, 229, 230, 0.38)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-disabled-light-off 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
        "disabled": true,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(51, 51, 51, 0.38)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix baseline (variant x size x {default,disabled} x modes) default-default-disabled-light-on 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": true,
        "disabled": true,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(51, 51, 51, 0.38)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) default-default-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="x"
    accessibilityRole="checkbox"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
    testID="ui-checkbox"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="checkbox"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#333333"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 18,
            "padding": 6,
          },
        ]
      }
      uncheckedColor="#646466"
    >
      <View
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#333333",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰄬
        </Text>
      </View>
    </View>
  </View>
</View>
`;
